--- a/contents/chp02.tex
+++ b/contents/chp02.tex
@@ -315,7 +315,7 @@
 \subsubsection{混凝土桥梁上部结构}
 
 % There are several commonly used reinforced concrete bridge systems in the United States. The type of system implemented at a particular site is generally dictated by economics and the system's ability to accommodate the required span, or geometric requirements such as curvature.
-美国有几种常用的钢筋混凝土桥梁体系。 在特定地点实施的系统类型通常由经济性和系统适应所需跨度或几何要求（如曲率）的能力决定。
+美国有几种常用的钢筋混凝土桥梁\gls*{system}。特定地点实施的\gls*{system}类型通常由经济性和系统适应所需跨度或几何要求（如曲率）的能力决定。
 
 % The most commonly used concrete bridge superstructures are:
 最常用的混凝土桥梁上部结构有：
@@ -335,10 +335,10 @@
   \item Precast concrete box beams including both spread and adjacent box beams;
   \item Precast concrete I-girders including standard I-girders, bulb-tee girders, and U-beams;
   \item Precast concrete spliced girders, including spliced I-girders, U-beams, and box girders;
-  \item Cast-in-place posttensioned box girders;
-  \item Segmental posttensioned concrete box girders, including both precast or cast-in-place;
-  \item Concrete arches; and
-  \item Modular pre-topped concrete girder units, which are typically used for accelerated bridge construction.
+  \item 现浇后张法预应力混凝土箱梁；
+  \item 节段后张预应力混凝土箱梁、包括预制和现浇；
+  \item 混凝土拱；
+  \item 模块化预顶混凝土梁单元，通常用于\acrlong*{abc}。
 \end{itemize}
 
 % \paragraph{Cast-in-Place (CIP) Concrete Slabs}
@@ -360,13 +360,17 @@ Full-depth, cast-in-place concrete slab superstructures consist of a concrete sl
   \label{fig:short-span-concrete-bridge-applications}
 \end{figure}
 
-\paragraph{Precast Concrete Box Beams}
+% \paragraph{Precast Concrete Box Beams}
+\paragraph{预制混凝土箱梁}
 
 This type of superstructure consists of adjacent precast concrete box beams with non-composite deck, adjacent box beams with composite cast-in-place (CIP) concrete deck, and spread box beams with composite CIP concrete deck. Shallower precast solid and voided rectangular slabs also fall into this category. Precast concrete box beams are typically plant manufactured standard AASHTO-PCI sections that range in depth from 27 in. to 42 in. and are available in 36-in. or 48-in. widths. These precast girders are plant-produced, which generally results in high quality products.
+% 这种类型的上部结构由具有非复合桥面的相邻预制混凝土箱梁，具有组合现浇（CIP）混凝土桥面的相邻箱梁和具有复合CIP混凝土桥面的扩展箱梁组成。较浅的预制实心板和空隙矩形板也属于这一类。预制混凝土箱梁通常是工厂制造的标准 AASHTO-PCI 截面，深度范围从 27 英寸不等。至 42 英寸。并提供 36 英寸。或 48 英寸。宽度。这些预制梁是植物生产的，通常会产生高质量的产品。
 
-Precast adjacent box beam bridges are the most prevalent box girder system for short and medium-span bridges, typically 20 to 127 feet, especially on secondary roadways. These bridges consist of multiple precast concrete box beams that are butted against each other to form the bridge deck and superstructure. Their advantage is that they eliminate the need for forming when using a composite CIP deck, or can be used directly with a bituminous overlay in the non-composite state. Adjacent box beams are generally connected using partial or full-depth grouted shear keys along the sides of each box. Transverse ties are usually used in addition to the grouted shear keys and may vary from a limited number of threaded rods to several posttensioned tendons. In some cases, no topping is applied to the structure while in other cases a non-composite topping or a composite structural slab is added. Problems have been encountered with adjacent non-composite box beam superstructures and are further discussed in Section 2.3.3.2.2.
+% Precast adjacent box beam bridges are the most prevalent box girder system for short and medium-span bridges, typically 20 to 127 feet, especially on secondary roadways. These bridges consist of multiple precast concrete box beams that are butted against each other to form the bridge deck and superstructure. Their advantage is that they eliminate the need for forming when using a composite CIP deck, or can be used directly with a bituminous overlay in the non-composite state. Adjacent box beams are generally connected using partial or full-depth grouted shear keys along the sides of each box. Transverse ties are usually used in addition to the grouted shear keys and may vary from a limited number of threaded rods to several posttensioned tendons. In some cases, no topping is applied to the structure while in other cases a non-composite topping or a composite structural slab is added. Problems have been encountered with adjacent non-composite box beam superstructures and are further discussed in \cref{par:adjacent-box-deterioration}.
+\gls*{adjacentbox}桥是中小跨径桥梁中最普遍的箱梁系统，通常为 \qtyrange{6}{38}{m}，尤其是在二级道路上。这类桥梁由多个预制混凝土箱梁组成，这些梁横向相互对接以形成桥面和上部结构。它们的优点是，在使用组合\acrlong*{cip}桥面板时无需成型，或者可以直接在非组合状态下与沥青覆盖层一起使用。\gls*{adjacentbox}通常沿每个箱体的侧面使用部分或全深度灌浆剪切键连接。除了灌浆剪切键外，通常还使用横向系杆，可能从有限数量的螺纹杆到几束后张预应力钢束不等。在某些情况下，不会对结构进行浇头，而在其他情况下，则添加非复合浇头或复合结构板。非组合的\gls*{adjacentbox}上部结构遇到了问题，并在\cref{par:adjacent-box-deterioration}中进一步讨论。
 
-\paragraph{Precast Concrete Girders}
+% \paragraph{Precast Concrete Girders}
+\paragraph{预制混凝土梁}
 
 Precast concrete I-girders with composite cast-in-place deck are commonly used concrete bridge superstructures in the 50- to 150-ft-plus span range. These girders are made of high-performance, plant-produced materials and are generally very durable and result in high quality products. In a bridge system consisting of I-girders with composite CIP slabs, commonly referred to as beam-slab bridges (see \cref{fig:concrete-I-girder-with-composite-deck}), the longitudinal stringers are often prestressed concrete I-girders using one of six standard AASHTO-PCI sections, Types I through VI, which vary in depth from 28 to 54 in. In addition, newer standard AASHTO-PCI bulb-tee (BT) shapes are used in 54-, 63-, and 72- in. depths. These standard I and BT shapes accommodate various span requirements up to about 170 ft.
 
@@ -388,42 +392,24 @@ A noteworthy I-girder advancement is the NU I-girder, which was developed by the
   \label{fig:nu-i-girder}
 \end{figure}
 
-In many instances, precast concrete I-girders are erected as simple spans and then connected over the piers to form continuous for live load systems that eliminate deck joints.
+% In many instances, precast concrete I-girders are erected as simple spans and then connected over the piers to form continuous for live load systems that eliminate deck joints.
+在许多情况下，预制混凝土工字梁以简支跨的形式吊装，然后在桥墩上进行连接，形成对活载连续的体系，减少了桥面接缝。
 
-A newer alternative to concrete I-girders is the U-beam, or concrete tub girder, concept, first developed in Texas
-and now used in other states including Florida and Washington State, that provides economic and aesthetic spread
-beam systems. The Texas U54 beam is 54-in. deep, similar to an AASHTO Type IV beam, and can span up to about
-140 feet (Ralls et al. 1993). The Florida U-beams have four depths ranging from 48 in. to 72 in., and can be used in
-spans ranging from about 100 ft to 160 ft (FDOT 2012). Washington State (WSDOT) U-beams are similar and have
-four depths varying from 54 in. to 72 in., and bottom flanges that are either 4-ft or 5-ft wide. Similar to Florida, these beams can accommodate span lengths up to 160 ft. With a composite concrete deck, U- beams form a trapezoidal
-box shape, similar to steel tub girders. These beams are typically designed to act as simple spans under both dead
-load and live load, even when the deck is placed continuous across intermediate supports. As with I-girders, these
-beams are plant produced and result in high quality products.
+A newer alternative to concrete I-girders is the U-beam, or concrete tub girder, concept, first developed in Texas and now used in other states including Florida and Washington State, that provides economic and aesthetic spread beam systems. The Texas U54 beam is 54-in. deep, similar to an AASHTO Type IV beam, and can span up to about 140 feet (Ralls et al. 1993). The Florida U-beams have four depths ranging from 48 in. to 72 in., and can be used in spans ranging from about 100 ft to 160 ft (FDOT 2012). Washington State (WSDOT) U-beams are similar and have four depths varying from 54 in. to 72 in., and bottom flanges that are either 4-ft or 5-ft wide. Similar to Florida, these beams can accommodate span lengths up to 160 ft. With a composite concrete deck, U- beams form a trapezoidal box shape, similar to steel tub girders. These beams are typically designed to act as simple spans under both dead load and live load, even when the deck is placed continuous across intermediate supports. As with I-girders, these beams are plant produced and result in high quality products.
 
 \paragraph{Precast Concrete Spliced Girders}
-Spliced girders are precast concrete girders fabricated in several segments that are then assembled
-longitudinally, typically using posttensioning, into a single simple-span or continuous girder for the final bridge
-structure. They have been used to extend the span lengths of regular short- to medium-span precast concrete girders
-and are designed to utilize the economy and high quality of plant-produced precast girders for longer span
-applications. The length and weight of typical precast girders prevents them from being effectively used on spans
-greater than about 150-feet due to the limitations of transportation equipment and available cranes. However, with
-spliced girders, precast girder segments with manageable weights and lengths are transported to the construction site
-and then joined together. This can either be done by splicing girder segments on the ground and erected them into
-their final position, or by placing girder segments on temporary supports and then splicing them in their final
-position. Spliced girders have been used for simple spans up to about 220 ft, and for continuous spans up to about
-320 ft, and have been found to provide an economical concrete superstructure type in span ranges between that of
-conventional precast girders and segmental box girders. \cref{fig:spliced-i-girder} shows a typical spliced girder span under
-construction using temporary supports.
+Spliced girders are precast concrete girders fabricated in several segments that are then assembled longitudinally, typically using posttensioning, into a single simple-span or continuous girder for the final bridge structure. They have been used to extend the span lengths of regular short- to medium-span precast concrete girders and are designed to utilize the economy and high quality of plant-produced precast girders for longer span applications. The length and weight of typical precast girders prevents them from being effectively used on spans greater than about 150-feet due to the limitations of transportation equipment and available cranes. However, with spliced girders, precast girder segments with manageable weights and lengths are transported to the construction site and then joined together. This can either be done by splicing girder segments on the ground and erected them into their final position, or by placing girder segments on temporary supports and then splicing them in their final position. Spliced girders have been used for simple spans up to about 220 ft, and for continuous spans up to about 320 ft, and have been found to provide an economical concrete superstructure type in span ranges between that of conventional precast girders and segmental box girders. \cref{fig:spliced-i-girder} shows a typical spliced girder span under construction using temporary supports.
 
 \begin{figure}
   \includegraphics[width=0.65\linewidth]{spliced-i-girder.jpg}
-  \caption{Spliced I-girder construction. (Courtesy HDR)}\label{fig:spliced-i-girder}
+  % \caption{Spliced I-girder construction. (Courtesy HDR)}
+  \caption{拼接工字梁结构}
+  \label{fig:spliced-i-girder}
 \end{figure}
 
 
-Spliced girders are typically used on relatively straight alignments; however, in recent years they have also been
-used for curved alignments in Nebraska and Colorado. \cref{fig:spliced-concrete-curved-box} shows a spliced-box girder bridge recently built
-in Denver, Colorado.
+Spliced girders are typically used on relatively straight alignments; however, in recent years they have also been used for curved alignments in Nebraska and Colorado. \cref{fig:spliced-concrete-curved-box} shows a spliced-box girder bridge recently built in Denver, Colorado.
+
 
 \begin{figure}
   \includegraphics[width=0.65\linewidth]{spliced-concrete-curved-box.jpg}
@@ -1303,7 +1289,9 @@ The durability of concrete exposed to these influences is highly dependent on de
 Concrete superstructures in thermal or marine environments are not exposed to the same concentration of chlorides as the top of a bridge deck that may be directly in contact with deicing salts. They are, however, susceptible to the same type of corrosion, only at a slower rate through the same mechanism of failure.
 
 \paragraph{Adjacent Box Beam Deterioration}
-Bridges constructed using adjacent box beams have been in service for many years and have generally performed well. However, a recurring problem with non-composite beams is cracking in the grouted joints between adjacent units, resulting in reflective cracks in the wearing surface. The development of these longitudinal cracks jeopardizes the durability and structural behavior of adjacent box beam bridges. In most cases, the cracking leads to leakage, which allows chloride-laden water to penetrate the sides and bottom of the beams and cause corrosion of the non-prestressed and prestressed reinforcement, see \cref{fig:longitudinal-cracking-adjacent-box-beam}. In addition, the load distribution among the beams is adversely affected, requiring the loaded beams to carry more load than originally intended.
+\label{par:adjacent-box-deterioration}
+% Bridges constructed using adjacent box beams have been in service for many years and have generally performed well. However, a recurring problem with non-composite beams is cracking in the grouted joints between adjacent units, resulting in reflective cracks in the wearing surface. The development of these longitudinal cracks jeopardizes the durability and structural behavior of adjacent box beam bridges. In most cases, the cracking leads to leakage, which allows chloride-laden water to penetrate the sides and bottom of the beams and cause corrosion of the non-prestressed and prestressed reinforcement, see \cref{fig:longitudinal-cracking-adjacent-box-beam}. In addition, the load distribution among the beams is adversely affected, requiring the loaded beams to carry more load than originally intended.
+使用\gls*{adjacentbox}建造的桥梁已经使用多年，并且通常表现良好。然而，非组合梁的一个反复出现的问题是相邻单元之间的灌浆接头开裂，导致磨损表面出现反射裂纹。这些纵向裂纹的发展危及\gls*{adjacentbox}桥的耐久性和结构行为。在大多数情况下，开裂会导致泄漏，这使得含氯化物的水渗透到梁的侧面和底部，并导致非预应力和预应力钢筋的腐蚀，请参见\cref{fig:longitudinal-cracking-adjacent-box-beam}。此外，梁之间的荷载横向分布受到不利影响，要求每一片梁要承受比最初预期更多的荷载。
 
 \begin{figure}
   \begin{minipage}{0.5\linewidth}\centering
