--- a/contents/chp07.tex
+++ b/contents/chp07.tex
@@ -433,11 +433,7 @@ extensive corrosion is shown in \cref{fig:corrosion-eyebar-connection}.
   \label{fig:corrosion-eyebar-connection}
 \end{figure}
 
-In the case of truss bridges, it is recommended to add, rather than replace truss members. Removing even single
-truss member or connection could easily lead to bridge failure. In retrofitting many existing old truss bridges,
-extensive corrosion of eyebars in tension could be addressed by adding additional tension members, while keeping
-the existing ones in place. \cref{fig:retrofit-option-eyebar-connection} shows a possible retrofit alternative for eyebars in tension in existing truss
-bridges. (Azizinamini 2002)
+In the case of truss bridges, it is recommended to add, rather than replace truss members. Removing even single truss member or connection could easily lead to bridge failure. In retrofitting many existing old truss bridges, extensive corrosion of eyebars in tension could be addressed by adding additional tension members, while keeping the existing ones in place. \cref{fig:retrofit-option-eyebar-connection} shows a possible retrofit alternative for eyebars in tension in existing truss bridges. (Azizinamini 2002)
 
 \begin{figure}
   \includegraphics[width=0.5\linewidth]{retrofit-option-eyebar-connection.jpg}
@@ -446,17 +442,11 @@ bridges. (Azizinamini 2002)
 \end{figure}
 
 \subsection{Temporary Tack Welds}
-Tack welds used to temporarily hold members in place during construction can be sources of concern for fatigue
-cracks. Fatigue cracks tend to form at the ends of the tack welds and then propagate into the base metal. The most
-susceptible types of tack welds are longitudinal, and those located at the end of tack-welded members. Tack welds
-can be removed using grinding methods.
+Tack welds used to temporarily hold members in place during construction can be sources of concern for fatigue cracks. Fatigue cracks tend to form at the ends of the tack welds and then propagate into the base metal. The most susceptible types of tack welds are longitudinal, and those located at the end of tack-welded members. Tack welds can be removed using grinding methods.
 
 
 \subsection{Connection Angles}
-Connection angles used to connect diaphragms to girder webs are susceptible to fatigue cracking due to
-differential girder displacements. See \cref{fig:deformation-mode-coneection-angles}. The thickness of such angles needs to be reduced in order to
-reduce the flexural rigidity of the elements and negate the causes of the differential girder displacements. The
-following equation helps determine the proper angle thickness to prevent cracking. (Dexter and Fisher 1999)
+Connection angles used to connect diaphragms to girder webs are susceptible to fatigue cracking due to differential girder displacements. See \cref{fig:deformation-mode-coneection-angles}. The thickness of such angles needs to be reduced in order to reduce the flexural rigidity of the elements and negate the causes of the differential girder displacements. The following equation helps determine the proper angle thickness to prevent cracking. (Dexter and Fisher 1999)
 \begin{equation}
   t\leqslant 12\left(\frac{g^2}{L}\right)
 \end{equation}
@@ -473,12 +463,9 @@ following equation helps determine the proper angle thickness to prevent crackin
 \end{figure}
 
 \subsection{Web Gusset Plates}
-Another source of fatigue cracks are web gusset plates, which can experience fatigue damage due to weld root
-defects and locations of intersecting welds. Intersecting welds can be retrofitted by coring holes at the intersections;
-this will not only remove the intersecting welds, but also reduce the web constraint. See \cref{fig:deep-girder-web-gusset,fig:retorfit-detail-gusset-plates}.
+Another source of fatigue cracks are web gusset plates, which can experience fatigue damage due to weld root defects and locations of intersecting welds. Intersecting welds can be retrofitted by coring holes at the intersections; this will not only remove the intersecting welds, but also reduce the web constraint. See \cref{fig:deep-girder-web-gusset,fig:retorfit-detail-gusset-plates}.
 
-Fatigue cracks have also been found to initiate from the ends of the gusset plates and propagate into the girder
-webs. This issue can be solved using impact treatments or grinding of the weld termination. See \cref{fig:detailing-crack-site2-retrofit}.
+Fatigue cracks have also been found to initiate from the ends of the gusset plates and propagate into the girder webs. This issue can be solved using impact treatments or grinding of the weld termination. See \cref{fig:detailing-crack-site2-retrofit}.
 
 \begin{figure}
   % \includegraphics[width=\linewidth]{graphic-file}
@@ -498,21 +485,20 @@ webs. This issue can be solved using impact treatments or grinding of the weld t
   \label{fig:detailing-crack-site2-retrofit}
 \end{figure}
 
-\subsection{Longitudinal Stiffeners}
-Fatigue cracks can form at the butt welds of longitudinal stiffeners, primarily due to poor workmanship and
-inherent defects of the welds. Drilling a large diameter hole into the longitudinal stiffener located next to the girder
-has proven to keep the crack from developing into the girder web. See \cref{fig:work-plan-butt-weld-retrofit}.
+% \subsection{Longitudinal Stiffeners}
+\subsection{纵向加劲肋}
+% Fatigue cracks can form at the butt welds of longitudinal stiffeners, primarily due to poor workmanship and inherent defects of the welds. Drilling a large diameter hole into the longitudinal stiffener located next to the girder has proven to keep the crack from developing into the girder web. See \cref{fig:work-plan-butt-weld-retrofit}.
+纵向加劲肋的对接焊缝处会形成疲劳裂纹，主要是由于工艺较差和焊缝固有缺陷。事实证明，在位于主梁旁边的纵向加劲肋上钻一个大直径的孔可以防止裂纹发展到主梁腹板中。参见\cref{fig:work-plan-butt-weld-retrofit}。
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{Work plan of longitudinal butt weld retrofit.}
+  \includegraphics{work-plan-butt-weld-retrofit.pdf}
+  \caption{纵向对焊改造}
   \label{fig:work-plan-butt-weld-retrofit}
 \end{figure}
 
-\subsection{Coped Beam Ends}
-Fatigue cracks have also been observed in coped beam ends. These cracks can be attributed to stresses from
-flame cut copes not ground smooth, or the presence of bending moments at these copes which were designed as
-simply supported. Square cut copes have the least fatigue resistance. Holes can be drilled as a retrofit option or the
-cope can be cut back with a radius.
+% \subsection{Coped Beam Ends}
+\subsection{切口梁梁端}
+% Fatigue cracks have also been observed in coped beam ends. These cracks can be attributed to stresses from flame cut copes not ground smooth, or the presence of bending moments at these copes which were designed as simply supported. Square cut copes have the least fatigue resistance. Holes can be drilled as a retrofit option or the cope can be cut back with a radius.
+在切口梁梁端部也会观察到疲劳裂纹。这些裂纹可归因于火焰切割盖板未磨平的应力，或者这些盖板处存在弯曲力矩，这个弯矩在设计中可按简支边界条件考虑。方形切割的抗疲劳性最低。可以钻孔作为改造选项，也可以用一定半径的圆弧进行切割。
 
 
