--- a/setup/setup.tex
+++ b/setup/setup.tex
@@ -236,6 +236,14 @@
 ]{nwc}{NWC}{普通重量混凝土}
 
 \newacronym[%
+  description={Light Weight Concrete, 轻质混凝土}
+]{lwc}{LWC}{轻质混凝土}
+
+\newacronym[%
+  description={Fiber-Reinforced , 纤维增强混凝土}
+]{frc}{FRC}{纤维增强混凝土}
+
+\newacronym[%
   description={High Performance Concrete, 高性能混凝土}
 ]{hpc}{HPC}{高性能混凝土}
 
