--- a/tables/scms-astm-use.tex
+++ b/tables/scms-astm-use.tex
@@ -2,7 +2,7 @@
   colspec={X[l] c X[l,3]},
   row{1}={bg=genfg,fg=white,font=\bfseries}
 }
-\gls{scm}         &\acrshort{astm} 标准 & 使用                \\
+\glsentrytext{scm}&\acrshort{astm} 标准 & 使用                \\
 粉煤灰，等级 F    & C618                & 低渗透性、耐化学性  \\
 粉煤灰，等级 C    & C618                & 低渗透性、耐化学性  \\
 粉煤灰，等级 N    & C618                & 低渗透性、耐化学性  \\
