--- a/setup/setup.tex
+++ b/setup/setup.tex
@@ -343,4 +343,12 @@
   description={Plastic Fracture Mechanics, 塑性断裂力学}
 ]{pfm}{PFM}{塑性断裂力学}
 
+\newacronym[%
+  description={High Range Water Reducing Admixtures, 高范围减水外加剂}
+]{hrwra}{HRWRA}{高范围减水外加剂}
+
+\newacronym[%
+  description={Visual Stability Index, 视觉稳定系数}
+]{vsi}{VSI}{视觉稳定系数}
+
 %%% ----------------------------------------------------------------------------
